# hackathon_proj

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  get_client.py  pyproject.toml  ruff.toml
data/: northwind.sql
document/: doc.md
src/: langgraph_sql_agent_tool.py  playground.py  tools.py
src/backend/: api_schema.py  app.py  exceptions.py  langgraph_sql_agent_tool.py  tools.py
src/backend/agent/: graph.py  node.py  prompt.py  tools.py
src/backend/config_management/: config.py
src/backend/routers/: health.py  prediction.py
src/backend/utils/: db_utils.py  get_langchain_llm.py  tool_creation.py
src/config_management/: config.py  config_settings.py
src/frontend/: app.py
src/utils/: db_utils.py
