[project]
name = "hackathon_proj"
version = "0.1.0"
description = "AaltoAI Hackathon 2025 Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "openai>=1.82.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.uv]
package = true

[config.default]
