[project]
name = "hackathon_proj"
version = "0.1.0"
description = "AaltoAI Hackathon 2025 Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langsmith>=0.3.42",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.uv]
package = true

[config.default]
